portfolio spell changed

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="navbar navbar-expand-md navbar-dark w-100 sticky-top mb-0 homenavbar">
         <div class="container-xl">
             <a href="#" class="navbar-brand fs-1 portfolio">
-                <p class="title-portfolio">Portfolio</p>
+                <p class="title-portfolio">Portfoli</p>
             </a>
 
             <label for="abc" class="text-center fs-3 mt-2">   
